[package]
name = "sync-steward"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
sync-store.workspace = true

anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
datafusion.workspace = true
deltalake.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
