[package]
name = "sync-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
blake3.workspace = true
chrono.workspace = true
datafusion.workspace = true
deltalake.workspace = true
log.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
object_store.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tinyfs.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
