[package]
name = "sync-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
sync-store.workspace = true
sync-steward.workspace = true
sync-remote.workspace = true

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
proptest.workspace = true
sync-store.workspace = true
sync-steward.workspace = true
sync-remote.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
uuid.workspace = true
