[package]
name = "tinyfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
uuid7 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
arrow-array.workspace = true
arrow-schema.workspace = true
arrow.workspace = true
parquet.workspace = true
deltalake.workspace = true
tokio-util.workspace = true
serde_arrow.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
bytes = { workspace = true }

[lints.clippy]
# Strong defaults: deny problematic patterns
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

# Specific Clippy lint customizations
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
must-use-candidate = "warn"
await_holding_lock = "warn"
manual_async_fn = "warn"
dbg_macro = "warn"
explicit_into_iter_loop = "warn"

# Explicitly allowed practical exceptions
multiple_crate_versions = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"
module_name_repetitions = "allow"
