# SPDX-FileCopyrightText: 2025 Caspar Water Company
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tinyfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[lib]
doctest = false

[dependencies]
blake3.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
log.workspace = true
uuid7.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow.workspace = true
parquet.workspace = true
datafusion.workspace = true
deltalake.workspace = true
tokio-util.workspace = true
serde_arrow.workspace = true
bytes.workspace = true
utilities = { path = "../utilities" }
bao-tree = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
