[package]
name = "tinylogfs"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
deltalake = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
oplog = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tinyfs = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints.clippy]
# Strong defaults: deny problematic patterns
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

# Specific Clippy lint customizations
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
must-use-candidate = "warn"
await_holding_lock = "warn"
manual_async_fn = "warn"
dbg_macro = "warn"
explicit_into_iter_loop = "warn"
