# SPDX-FileCopyrightText: 2025 Caspar Water Company
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tlogfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[lib]
doctest = false

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
async-compression = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bao-tree = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
data_privacy = { workspace = true }
data_privacy_macros = { workspace = true }
datafusion = { workspace = true }
deltalake = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
paste = { workspace = true }
provider = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tinyfs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
utilities = { workspace = true }
uuid7 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
utilities = { workspace = true }

[lints]
workspace = true
