[package]
name = "utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
chrono.workspace = true
arrow.workspace = true
parquet.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[lib]
doctest = false
