# SPDX-FileCopyrightText: 2025 Caspar Water Company
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
chrono.workspace = true
arrow.workspace = true
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet.workspace = true
thiserror.workspace = true
log.workspace = true
bao-tree = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
futures = { workspace = true }
deltalake = { workspace = true }
datafusion = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }

[lints]
workspace = true

[lib]
doctest = false
