[package]
name = "sandbox-remote"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
sandbox-store.workspace = true
sandbox-steward.workspace = true

anyhow.workspace = true
chrono.workspace = true
deltalake.workspace = true
log.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
