[package]
name = "sandbox-remote"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
sandbox-store.workspace = true
sandbox-steward.workspace = true

anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
blake3.workspace = true
chrono.workspace = true
datafusion.workspace = true
deltalake.workspace = true
log.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
blake3.workspace = true
datafusion.workspace = true
env_logger.workspace = true
sandbox-store.workspace = true
sandbox-steward.workspace = true
tempfile.workspace = true
tokio.workspace = true
url.workspace = true
