[package]
name = "sandbox-steward"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
sandbox-store.workspace = true

anyhow.workspace = true
chrono.workspace = true
deltalake.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
