[package]
name = "sandbox-store"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
blake3.workspace = true
chrono.workspace = true
datafusion.workspace = true
deltalake.workspace = true
log.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
object_store.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
