[package]
name = "sandbox-tests"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
sandbox-store.workspace = true
sandbox-steward.workspace = true
sandbox-remote.workspace = true

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
proptest.workspace = true
sandbox-store.workspace = true
sandbox-steward.workspace = true
sandbox-remote.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
uuid.workspace = true
